--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "angular-chart.js": "^0.8.8"
+    "angular-chart.js": "^0.8.8",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "event-stream": "^3.3.2",
+    "gulp-clean": "^0.3.1",
+    "papaparse": "^4.1.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-odometer": "0.0.1"
   },
   "devDependencies": {},
   "scripts": {
