--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babelify": "^7.2.0",
     "event-stream": "^3.3.2",
     "gulp-clean": "^0.3.1",
+    "lodash": "^4.5.0",
     "papaparse": "^4.1.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
