--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "event-stream": "^3.3.2",
     "gulp-clean": "^0.3.1",
     "lodash": "^4.5.0",
+    "numeral": "^1.5.3",
     "papaparse": "^4.1.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
